--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       return check;
     };
   </script>
-  <script src="/game.js"></script>
+  <script src="./game.js"></script>
 </body>
 
 </html>
